--- a/Olist_Project_Ingestion.ipynb
+++ b/Olist_Project_Ingestion.ipynb
@@ -40,11 +40,12 @@
     "  pip install duckdb pyarrow google-cloud-storage google-cloud-bigquery google-cloud-bigquery-storage tqdm\n",
     "  ```\n",
     "- Google Cloud:\n",
-    "  - A GCS bucket (e.g., `gs://YOUR_BUCKET/olist/bronze/parquet/`)\n",
+    "  - A GCS bucket (e.g., `gs://YOUR_BUCKET/olist/bronze/parquet/`) create GCS bucket follow 2. Using the Google Cloud Console (UI) below\n",
     "  - A BigQuery dataset (e.g., `olist_bronze`), or permission to create one\n",
     "  - Application Default Credentials (ADC) or a Service Account JSON:\n",
     "    ```bash\n",
-    "    gcloud auth application-default login\n",
+    "    #gcloud auth login\n",
+    "    #login to the new project id. \n",
     "    # or set env var to your SA key:\n",
     "    export GOOGLE_APPLICATION_CREDENTIALS=/path/to/sa.json\n",
     "    ```\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "6cdfc796",
    "metadata": {},
    "outputs": [
@@ -63,15 +64,9 @@
      "text": [
       "Your browser has been opened to visit:\n",
       "\n",
-      "    https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=32555940559.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8085%2F&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fappengine.admin+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fsqlservice.login+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcompute+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&state=oQXvZZFQ0uDxP82dn0PWRzJTbBBbvK&access_type=offline&code_challenge=B5mL-sWnCsgF0QdNuwzcwIvBOsoAzix5S7hdsG30F80&code_challenge_method=S256\n",
+      "    https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=32555940559.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8085%2F&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fappengine.admin+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fsqlservice.login+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcompute+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&state=FBqK3c7iUhZDLD34tky5j0qLApAgle&access_type=offline&code_challenge=wbPEhqRASDKj6SQYVOLfH1UjJo8Ob52WWJO1t3mMXvU&code_challenge_method=S256\n",
       "\n",
-      "\n",
-      "You are now logged in as [jezmy889@gmail.com].\n",
-      "Your current project is [olist-project-470402].  You can change this setting by running:\n",
-      "  $ gcloud config set project PROJECT_ID\n",
-      "\u001b[1;33mWARNING:\u001b[0m Your active project does not match the quota project in your local Application Default Credentials file. This might result in unexpected quota issues.\n",
-      "\n",
-      "To update your Application Default Credentials quota project, use the `gcloud auth application-default set-quota-project` command.\n",
+      "^C\n",
       "Updated property [core/project].\n"
      ]
     }
