Jupyter notebook for Olist data ingestion

--- a/Olist_Project_Ingestion.ipynb
+++ b/Olist_Project_Ingestion.ipynb
@@ -82,7 +82,7 @@
    "id": "99fb2a3f",
    "metadata": {},
    "source": [
-    "2. Using the Google Cloud Console (UI)\n",
+    " Using the Google Cloud Console (UI)\n",
     "\t1.\tGo to: https://console.cloud.google.com/storage\n",
     "\t2.\tselect olist project, then Click “Create bucket”\n",
     "\t3.\tEnter a globally unique name olist_bronze_data_12345)\n",
